converted rem to tailwind size

--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
 <body class="lato">
     
     <!-- Nav Bar -->
-    <nav class="rounded-full bg-theme-red flex justify-between items-center py-4 mt-12 mx-60">
+    <nav class="rounded-full bg-theme-red flex justify-between items-center py-4 mt-12 mx-40">
 
         <!-- Nav Left -->
         <div> 
-            <ul class="list-none flex p-[0.625rem] text-white mx-12 my-0">
-                <li class="p-[0.625rem]">Home</li>
-                <li class="p-[0.625rem]">About Us</li>
-                <li class="p-[0.625rem]">Shop</li>
-                <li class="p-[0.625rem]">All Fruit</li>
+            <ul class="list-none flex p-2 text-white mx-12 my-0">
+                <li class="p-2.5">Home</li>
+                <li class="p-2.5">About Us</li>
+                <li class="p-2.5">Shop</li>
+                <li class="p-2.5">All Fruit</li>
             </ul>
         </div>
 
         <!-- Nav Middle -->
-        <div class="flex items-center p-[0.625rem] text-white text-4xl my-0"> 
+        <div class="flex items-center p-2.5 text-white text-4xl my-0"> 
             <img src="images/logo.png" alt="" class="px-2">
             <h2 class="px-2">Fruit Burst</h2>
         </div>
