--- a/index.html
+++ b/index.html
@@ -68,15 +68,37 @@
     </div>
 
     <!-- Banner -->
+
     <header class="flex justify-center">
         <div class="carousel w-10/12 mt-14">
-            <div id="slide1" class="carousel-item relative w-full">
-              <img src="images/banner1.png" class="w-full" />
-              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <div id="slide1" class="carousel-item relative w-full items-center">
+
+                <div class="flex justify-center items-center w-full">
+                    <div class="absolute w-full z-0">
+                        <img src="images/banner1.png" class="w-full" />
+                    </div>
+    
+                    <div class="z-30 flex flex-col justify-center">
+                        <div class="flex flex-col justify-center items-center">
+
+                            <h1 class="text-2xl md:text-7xl text-center text-white font-extrabold">Exotic tastes at your<br>doorstep</h1>
+                            <p class="text-sm my-4 md:text-xl text-center text-white font-medium md:my-6">We supply highly quality organic products</p>
+                            <button class="btn btn-primary bg-theme-red text-white border-none text-sm md:text-lg">Shop Now</button>
+
+                        </div>
+                    </div>
+
+                    <div class="absolute w-full bg-black z-20 h-full opacity-50">
+
+                    </div>
+                </div>
+
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 z-30">
                 <a href="#slide4" class="btn btn-circle">❮</a> 
                 <a href="#slide2" class="btn btn-circle">❯</a>
               </div>
             </div> 
+
             <div id="slide2" class="carousel-item relative w-full">
               <img src="images/banner2.png" class="w-full" />
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -99,8 +121,8 @@
               </div>
             </div>
           </div>
-
     </header>
+
 
     <!-- Deal of the day -->
     <main>
