deal of the day half done

--- a/index.html
+++ b/index.html
@@ -194,8 +194,43 @@
 
 
     <!-- Deal of the day -->
-    <main>
+    <main class="mt-32 flex justify-center">
+        <div class="flex justify-between w-10/12 items-center">
+            <div>
+                <h1 class="text-5xl font-extrabold">Deal of the day</h1>
+                <p class="text-base pt-6 font-medium">Contrary to popular belief, is not simply random text. It has roots in a piece
+                    of classical<br>Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
 
+            <!-- Timer Snippet -->
+            <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                <div class="flex flex-col">
+                    <span class="countdown font-mono text-5xl">
+                        <span style="--value:15;"></span>
+                    </span>
+                    days
+                </div>
+                <div class="flex flex-col">
+                    <span class="countdown font-mono text-5xl">
+                        <span style="--value:10;"></span>
+                    </span>
+                    hours
+                </div>
+                <div class="flex flex-col">
+                    <span class="countdown font-mono text-5xl">
+                        <span style="--value:24;"></span>
+                    </span>
+                    min
+                </div>
+                <div class="flex flex-col">
+                    <span class="countdown font-mono text-5xl">
+                        <span style="--value:32;"></span>
+                    </span>
+                    sec
+                </div>
+
+            </div>
+        </div>
     </main>
 
     <!-- Meet the team -->
@@ -212,31 +247,31 @@
     <footer class="footer footer-center p-10 bg-[#121212] text-base-content rounded mt-32 py-36">
         <div class="flex">
             <img class="h-14" src="images/logo.png" alt="">
-            <h1 class="text-5xl font-bold text-white" >Fruit Burst</h1>
+            <h1 class="text-5xl font-bold text-white">Fruit Burst</h1>
         </div>
 
         <div class="grid grid-flow-col gap-4 text-white text-lg font-normal flex-wrap">
-          <a class="link link-hover">Home</a> 
-          <a class="link link-hover">About Us</a> 
-          <a class="link link-hover">Shop</a> 
-          <a class="link link-hover">All Fruits kit</a>
-          <a class="link link-hover">Support</a> 
-          <a class="link link-hover">My Account</a>
-        </div> 
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About Us</a>
+            <a class="link link-hover">Shop</a>
+            <a class="link link-hover">All Fruits kit</a>
+            <a class="link link-hover">Support</a>
+            <a class="link link-hover">My Account</a>
+        </div>
         <div>
-          <div class="grid grid-flow-col gap-4">
-            <img class="h-10" src="images/twitter.png" alt="">
-            <img class="h-10" src="images/facebook-circular-logo.png" alt="">
-            <img class="h-10" src="images/utube.png" alt="">
-            <img class="h-10" src="images/linkedin.png" alt="">
-            <img class="h-10" src="images/instagram.png" alt="">
-            <img class="h-10" src="images/apple.png" alt="">
-          </div>
-        </div> 
+            <div class="grid grid-flow-col gap-4">
+                <img class="h-10" src="images/twitter.png" alt="">
+                <img class="h-10" src="images/facebook-circular-logo.png" alt="">
+                <img class="h-10" src="images/utube.png" alt="">
+                <img class="h-10" src="images/linkedin.png" alt="">
+                <img class="h-10" src="images/instagram.png" alt="">
+                <img class="h-10" src="images/apple.png" alt="">
+            </div>
+        </div>
         <!-- <div>
           <p>Copyright © 2023 - All right reserved by Mantasarul Elahi</p>
         </div> -->
-      </footer>
+    </footer>
 
 </body>
 
