--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <!-- Nav Bar -->
     <!-- <nav class="rounded-full bg-theme-red flex justify-between items-center py-4 mt-12 mx-40"> -->
 
-    <div class="flex justify-center">
-        <nav class="rounded-full bg-theme-red flex justify-between items-center py-4 mt-12 w-10/12">
+    <div class="container mx-auto flex justify-center">
+        <nav class="rounded-full bg-theme-red flex justify-between items-center py-4 mt-12 w-full mx-6">
 
             <!-- Nav Left -->
             <div>
@@ -60,12 +60,19 @@
             </div>
 
             <!-- Nav Search -->
-            <div class="mx-12">
-                <input type="text" placeholder="Search here" class="input w-full max-w-xs rounded-full my-0" />
-                <!-- <img src="images/search.svg" alt=""> -->
+            <div class="flex justify-between px-7 border-2 bg-white border-none rounded-full w-96 h-14 items-center mx-12">        
+                <input class="border-white" type="text" placeholder="Search here">
+                <img class="w-6 h-6" src="images/search.png" alt="">
             </div>
+        
         </nav>
     </div>
+
+
+
+
+
+
 
     <!-- Banner -->
 
