--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <!-- <div class="container mx-auto"> -->
         <!-- <div class="flex justify-center items-center w-10/12"> -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-            <div class="mt-12 w-auto mx-5">
+            <div class="mt-12 mx-5">
                 <div
                     class="flex justify-center items-center card w-auto bg-base-100 shadow-xl border-gray-300 border-2">
                     <figure class="w-28 h-28 p-0 mb-0 mt-12">
@@ -437,8 +437,89 @@
     </main>
 
     <!-- Meet the team -->
-    <section>
+    <section class="container mx-auto">
+        <div class="mx-6">
+            <div class="hero min-h-full w-full" style="background-image: url(images/banner1.png);">
+                <div class="hero-overlay bg-opacity-70"></div>
+                <!-- <div class="hero-content text-center text-neutral-content border-2 border-red-500"> -->
+                <div class="hero-content text-center text-neutral-content">
+                    <!-- <div class="max-w-2xl mb-28"> -->
+                    <div class="mb-28">
+                        <div class="w-full mt-28">
+                            <h1 class="mb-5 text-5xl font-bold text-white">Meet the Team</h1>
+                            <p class="mb-5 text-white">Contrary to popular belief, is not simply random text. It has roots in a
+                                piece
+                                of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                        </div>
 
+
+                        <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-36"> -->
+                        <div class="">
+                            <!-- Meet the Team Card -->
+                            <div
+                                class="flex flex-col lg:flex-row justify-between items-center w-auto">
+                                <!-- class="flex flex-col lg:flex-row justify-between items-center w-auto border-2"> -->
+                                <div class="flex justify-center flex-col items-center">
+                                    <figure class="w-28 h-28 p-0 mb-0 mt-12">
+                                        <img class="mb-8" src="images/member1.png" alt="">
+                                    </figure>
+                                    <h1 class="text-2xl">Awlad Hossain</h1>
+                                    <h5 class="text-base">Fruit Expert</h5>
+                                    <div class="flex mt-4">
+                                        <img class="w-6 mx-1.5" src="images/facebook-circular-logo.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/twitter.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/linkedin.png" alt="">
+                                    </div>
+                                </div>
+
+                                <!-- Meet the Team Card -->
+                                <div class="flex justify-center flex-col items-center">
+                                    <figure class="w-28 h-28 p-0 mb-0 mt-12">
+                                        <img class="mb-8" src="images/member2.png" alt="">
+                                    </figure>
+                                    <h1 class="text-2xl">Safia Chowdhury </h1>
+                                    <h5 class="text-base">Fruit Expert</h5>
+                                    <div class="flex mt-4">
+                                        <img class="w-6 mx-1.5" src="images/facebook-circular-logo.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/twitter.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/linkedin.png" alt="">
+                                    </div>
+                                </div>
+                                <!-- Meet the Team Card -->
+                                <div class="flex justify-center flex-col items-center">
+                                    <figure class="w-28 h-28 p-0 mb-0 mt-12">
+                                        <img class="mb-8" src="images/member3.png" alt="">
+                                    </figure>
+                                    <h1 class="text-2xl">Rokib Hossain</h1>
+                                    <h5 class="text-base">Fruit Expert</h5>
+                                    <div class="flex mt-4">
+                                        <img class="w-6 mx-1.5" src="images/facebook-circular-logo.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/twitter.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/linkedin.png" alt="">
+                                    </div>
+                                </div>
+                                <!-- Meet the Team Card -->
+                                <div class="flex justify-center flex-col items-center">
+                                    <figure class="w-28 h-28 p-0 mb-0 mt-12">
+                                        <img class="mb-8" src="images/member4.png" alt="">
+                                    </figure>
+                                    <h1 class="text-2xl">Chaity</h1>
+                                    <h5 class="text-base">Fruit Expert</h5>
+                                    <div class="flex mt-4">
+                                        <img class="w-6 mx-1.5" src="images/facebook-circular-logo.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/twitter.png" alt="">
+                                        <img class="w-6 mx-1.5" src="images/linkedin.png" alt="">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <!-- Why choose us -->
