made banner bonus hidden for small device

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <!-- Banner -->
 
     <header class="flex justify-center container mx-auto">
-        <div class="carousel w-full mx-6 mt-14">
+        <div class="carousel w-full mx-6 mt-14 relative">
 
             <div id="slide1" class="carousel-item relative w-full items-center">
                 <div class="flex justify-center items-center w-full">
@@ -198,6 +198,35 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Banner Bonus Test -->
+            <section class="flex absolute py-12 lg:px-16 bg-white drop-shadow-md z-40 rounded-lg -bottom-2">
+                    <div class="hidden sm:block md:block">
+                        <img src="images/fruit1.png" alt="">
+                        <h6 class="text-center">Grape</h6>
+                    </div>
+                    <div class="hidden sm:block md:block">
+                        <img src="images/fruit2.png" alt="">
+                        <h6 class="text-center">Orange</h6>
+                    </div>
+                    <div class="hidden sm:block md:block">
+                        <img src="images/fruit3.png" alt="">
+                        <h6 class="text-center">Mango</h6>
+                    </div>
+                    <div class="hidden sm:block md:block">
+                        <img src="images/fruit4.png" alt="">
+                        <h6 class="text-center">Strawberry</h6>
+                    </div>
+                    <div class="hidden sm:block md:block">
+                        <img src="images/fruit5.png" alt="">
+                        <h6 class="text-center">Pomegranate</h6>
+                    </div>
+                
+            </section>
+
+
+
     </header>
 
 
