large device all okay

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -201,29 +201,29 @@
 
 
         <!-- Banner Bonus Test -->
-            <section class="flex absolute py-12 lg:px-16 bg-white drop-shadow-md z-40 rounded-lg -bottom-2">
-                    <div class="hidden sm:block md:block">
-                        <img src="images/fruit1.png" alt="">
-                        <h6 class="text-center">Grape</h6>
-                    </div>
-                    <div class="hidden sm:block md:block">
-                        <img src="images/fruit2.png" alt="">
-                        <h6 class="text-center">Orange</h6>
-                    </div>
-                    <div class="hidden sm:block md:block">
-                        <img src="images/fruit3.png" alt="">
-                        <h6 class="text-center">Mango</h6>
-                    </div>
-                    <div class="hidden sm:block md:block">
-                        <img src="images/fruit4.png" alt="">
-                        <h6 class="text-center">Strawberry</h6>
-                    </div>
-                    <div class="hidden sm:block md:block">
-                        <img src="images/fruit5.png" alt="">
-                        <h6 class="text-center">Pomegranate</h6>
-                    </div>
-                
-            </section>
+        <section class="flex absolute py-12 lg:px-16 bg-white drop-shadow-md z-40 rounded-lg -bottom-2">
+            <div class="hidden sm:block md:block">
+                <img src="images/fruit1.png" alt="">
+                <h6 class="text-center">Grape</h6>
+            </div>
+            <div class="hidden sm:block md:block">
+                <img src="images/fruit2.png" alt="">
+                <h6 class="text-center">Orange</h6>
+            </div>
+            <div class="hidden sm:block md:block">
+                <img src="images/fruit3.png" alt="">
+                <h6 class="text-center">Mango</h6>
+            </div>
+            <div class="hidden sm:block md:block">
+                <img src="images/fruit4.png" alt="">
+                <h6 class="text-center">Strawberry</h6>
+            </div>
+            <div class="hidden sm:block md:block">
+                <img src="images/fruit5.png" alt="">
+                <h6 class="text-center">Pomegranate</h6>
+            </div>
+
+        </section>
 
 
 
@@ -231,7 +231,7 @@
 
 
     <!-- Deal of the day -->
-    <main class="mt-32 container mx-auto justify-center items-center">
+    <main class="mt-64 container mx-auto justify-center items-center">
         <div class="flex justify-center">
             <div class="flex justify-between w-full mx-6 items-center flex-col lg:flex-row">
                 <div>
@@ -476,7 +476,8 @@
                     <div class="mb-28">
                         <div class="w-full mt-28">
                             <h1 class="mb-5 text-5xl font-bold text-white">Meet the Team</h1>
-                            <p class="mb-5 text-white">Contrary to popular belief, is not simply random text. It has roots in a
+                            <p class="mb-5 text-white">Contrary to popular belief, is not simply random text. It has
+                                roots in a
                                 piece
                                 of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                         </div>
@@ -485,8 +486,7 @@
                         <!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-36"> -->
                         <div class="">
                             <!-- Meet the Team Card -->
-                            <div
-                                class="flex flex-col lg:flex-row justify-between items-center w-auto">
+                            <div class="flex flex-col lg:flex-row justify-between items-center w-auto">
                                 <!-- class="flex flex-col lg:flex-row justify-between items-center w-auto border-2"> -->
                                 <div class="flex justify-center flex-col items-center">
                                     <figure class="w-28 h-28 p-0 mb-0 mt-12">
@@ -552,7 +552,98 @@
     </section>
 
     <!-- Why choose us -->
-    <section>
+    <div class="flex flex-col container mx-auto mt-36 justify-center items-center">
+        <h1 class="text-center text-5xl font-extrabold my-6">Why Choose Us</h1>
+        <p class="text-base font-medium max-w-xl text-center">Contrary to popular belief, is not simply random text. It
+            has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+    </div>
+
+    <section class="container mx-auto mt-12 flex flex-col lg:flex-row justify-between items-center">
+    <!-- <section class="container mx-auto mt-36 border-2 border-red-500 flex flex-col lg:flex-row justify-between items-center"> -->
+        <!-- why choose us left side  -->
+        <div class="flex flex-col mx-3">
+            <div class="flex">
+                <div class="">
+                    <img class="w-16" src="images/diversity.png" alt="">
+                </div>
+                <div class="px-6">
+                    <h2 class="text-xl font-extrabold">Dedicated Team</h2>
+                    <div class="w-24 border border-gray-600 my-2"></div>
+                    <p class="text-base font-medium max-w-sm text-gray-600">Professional employees are there for you to
+                        pick the most amazing and fresh fruits.</p>
+                </div>
+            </div>
+            <div class="flex mt-12">
+                <div class="">
+                    <img class="w-16" src="images/fresh.png" alt="">
+                </div>
+                <div class="px-6">
+                    <h2 class="text-xl font-extrabold">Fresh is Best</h2>
+                    <div class="w-24 border border-gray-600 my-2"></div>
+                    <p class="text-base font-medium max-w-sm text-gray-600">Professional employees are there for you to
+                        pick the most amazing and fresh fruits.</p>
+                </div>
+            </div>
+            <div class="flex mt-12">
+                <div class="">
+                    <img class="w-16" src="images/gift-box.png" alt="">
+                </div>
+                <div class="px-6">
+                    <h2 class="text-xl font-extrabold">Gift Certificates</h2>
+                    <div class="w-24 border border-gray-600 my-2"></div>
+                    <p class="text-base font-medium max-w-sm text-gray-600">Professional employees are there for you to
+                        pick the most amazing and fresh fruits.</p>
+                </div>
+            </div>
+        </div>
+        <!-- why choose us left side end  -->
+
+        <div>
+            <img src="images/whychoose1.png" alt="">
+        </div>
+
+        <!-- why choose us right side  -->
+        <div class="flex flex-col mx-3">
+            <div class="flex justify-end">
+                <div class="px-6">
+                    <h2 class="text-xl font-extrabold text-right">Integrated Supplier</h2>
+                    <div class="flex justify-end">
+                        <div class="w-24 border border-gray-600 my-2 justify-end"></div>
+                    </div>
+                    <p class="text-base font-medium max-w-sm text-gray-600 text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div class="">
+                    <img class="w-16" src="images/supplier.png" alt="">
+                </div>
+            </div>
+            <div class="flex justify-end mt-12">
+                <div class="px-6">
+                    <h2 class="text-xl font-extrabold text-right">Sustainable Practice</h2>
+                    <div class="flex justify-end">
+                        <div class="w-24 border border-gray-600 my-2 justify-end"></div>
+                    </div>
+                    <p class="text-base font-medium max-w-sm text-gray-600 text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div class="">
+                    <img class="w-16" src="images/training.png" alt="">
+                </div>
+            </div>
+            <div class="flex justify-end mt-12">
+                <div class="px-6">
+                    <h2 class="text-xl font-extrabold text-right">The Benefits Only</h2>
+                    <div class="flex justify-end">
+                        <div class="w-24 border border-gray-600 my-2 justify-end"></div>
+                    </div>
+                    <p class="text-base font-medium max-w-sm text-gray-600 text-right">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                </div>
+                <div class="">
+                    <img class="w-16" src="images/growth.png" alt="">
+                </div>
+            </div>
+
+            
+        </div>
+        <!-- why choose us right side end  -->
 
     </section>
 
