--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 your<br>doorstep</h1>
                             <p class="text-sm my-4 md:text-xl text-center text-white font-medium md:my-6">We supply
                                 highly quality organic products</p>
-                            <button class="btn btn-active bg-theme-red text-white border-none text-sm lg:text-lg">Shop
+                            <button class="btn btn-active bg-theme-red text-white border-none text-sm lg:text-lg w-28 h-10 lg:w-40 lg:h-16">Shop
                                 Now</button>
                         </div>
                     </div>
@@ -109,6 +109,88 @@
                     <a href="#slide2" class="btn btn-circle">❯</a>
                 </div>
             </div>
+
+
+            <!-- delete if not work start  -->
+            <div id="slide2" class="carousel-item relative w-full items-center">
+                <div class="flex justify-center items-center w-full">
+                    <div class="absolute w-full z-0">
+                        <img src="images/banner2.png" class="w-full" />
+                    </div>
+                    <div class="z-30 flex flex-col justify-center">
+                        <div class="flex flex-col justify-center items-center">
+                            <h1 class="text-2xl md:text-7xl text-center text-white font-extrabold">Exotic tastes at
+                                your<br>doorstep</h1>
+                            <p class="text-sm my-4 md:text-xl text-center text-white font-medium md:my-6">We supply
+                                highly quality organic products</p>
+                            <button class="btn btn-active bg-theme-red text-white border-none text-sm lg:text-lg w-28 h-10 lg:w-40 lg:h-16">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div class="absolute w-full bg-black z-20 h-full opacity-50">
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 z-30">
+                    <a href="#slide4" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- delete if not work ends  -->
+
+
+            <!-- delete if not work start  -->
+            <div id="slide3" class="carousel-item relative w-full items-center">
+                <div class="flex justify-center items-center w-full">
+                    <div class="absolute w-full z-0">
+                        <img src="images/banner3.png" class="w-full" />
+                    </div>
+                    <div class="z-30 flex flex-col justify-center">
+                        <div class="flex flex-col justify-center items-center">
+                            <h1 class="text-2xl md:text-7xl text-center text-white font-extrabold">Exotic tastes at
+                                your<br>doorstep</h1>
+                            <p class="text-sm my-4 md:text-xl text-center text-white font-medium md:my-6">We supply
+                                highly quality organic products</p>
+                            <button class="btn btn-active bg-theme-red text-white border-none text-sm lg:text-lg w-28 h-10 lg:w-40 lg:h-16">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div class="absolute w-full bg-black z-20 h-full opacity-50">
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 z-30">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- delete if not work ends  -->
+
+
+            <!-- delete if not work start  -->
+            <div id="slide4" class="carousel-item relative w-full items-center">
+                <div class="flex justify-center items-center w-full">
+                    <div class="absolute w-full z-0">
+                        <img src="images/banner4.png" class="w-full" />
+                    </div>
+                    <div class="z-30 flex flex-col justify-center">
+                        <div class="flex flex-col justify-center items-center">
+                            <h1 class="text-2xl md:text-7xl text-center text-white font-extrabold">Exotic tastes at
+                                your<br>doorstep</h1>
+                            <p class="text-sm my-4 md:text-xl text-center text-white font-medium md:my-6">We supply
+                                highly quality organic products</p>
+                            <button class="btn btn-active bg-theme-red text-white border-none text-sm lg:text-lg w-28 h-10 lg:w-40 lg:h-16">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div class="absolute w-full bg-black z-20 h-full opacity-50">
+                    </div>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2 z-30">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <!-- delete if not work ends  -->
+
 
             <!-- <div id="slide2" class="carousel-item relative w-full items-center">
                 <div class="flex justify-center items-center w-full">
@@ -185,6 +267,7 @@
             <div id="slide2" class="carousel-item relative w-full">
                 <img src="images/banner2.png" class="w-full" />
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                    
                     <a href="#slide1" class="btn btn-circle">❮</a>
                     <a href="#slide3" class="btn btn-circle">❯</a>
                 </div>
