--- a/index.html
+++ b/index.html
@@ -857,13 +857,15 @@
             <h1 class="text-5xl font-bold text-white">Fruit Burst</h1>
         </div>
 
-        <div class="grid grid-flow-col gap-4 text-white text-lg font-normal flex-wrap">
-            <a class="link link-hover">Home</a>
-            <a class="link link-hover">About Us</a>
-            <a class="link link-hover">Shop</a>
-            <a class="link link-hover">All Fruits kit</a>
-            <a class="link link-hover">Support</a>
-            <a class="link link-hover">My Account</a>
+        <div class="grid grid-flow-col gap-4 text-white text-lg font-normal">
+            <div class="flex flex-wrap justify-center">
+                <a class="link link-hover px-7 my-4">Home</a>
+                <a class="link link-hover px-7 my-4 ">About Us</a>
+                <a class="link link-hover px-7 my-4">Shop</a>
+                <a class="link link-hover px-7 my-4">All Fruits kit</a>
+                <a class="link link-hover px-7 my-4">Support</a>
+                <a class="link link-hover px-7 my-4">My Account</a>
+            </div>
         </div>
         <div>
             <div class="grid grid-flow-col gap-4">
